Document reasons to prefer distributing JDK 21.
This also includes some info about GraalVM, which people are often curious about.